--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="portada">
+        <div class="cabeza">
+            <img src="" alt="">
+            <div class="menu">
+                <ul>
+                    <li>ABOUT</li>
+                    <li>PRODUCTOS</li>
+                    <li>SUSCRIBE</li>
+                </ul>
+            </div>
+        </div> <!-- end cabeza-->
+        
+    </div>
 </body>
 </html>
