--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
+
     <div class="portada">
         <div class="cabeza">
-            <img src="" alt="">
+            <img src="img/pizza-logo.webp" alt="">
             <div class="menu">
                 <ul>
-                    <li>ABOUT</li>
-                    <li>PRODUCTOS</li>
-                    <li>SUSCRIBE</li>
+                    <a href="#"><li>ABOUT</li></a>
+                    <a href=""><li>PRODUCTOS</li></a>
+                    <a href=""><li>SUSCRIBE</li></a>
                 </ul>
             </div>
         </div> <!-- end cabeza-->
-        
-    </div>
+        <h1>Pizzeria Yota</h1>
+        <h6></h6>
+    </div> <!--end portada-->
 </body>
 </html>
