avanzando en las propiedades del css portada

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div> <!-- end cabeza-->
         <h1>Pizzeria Yota</h1>
-        <h6></h6>
+        <h5> El sabor que te da vida</h5>
     </div> <!--end portada-->
 </body>
 </html>
