pasando portada a movil

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="menu">
                 <ul>
                     <a href="#"><li>ABOUT</li></a>
-                    <a href=""><li>PRODUCTOS</li></a>
-                    <a href=""><li>SUSCRIBE</li></a>
+                    <a href="#"><li>PRODUCTOS</li></a>
+                    <a href="#"><li class="exep">SUSCRIBE</li></a>
                 </ul>
             </div>
         </div> <!-- end cabeza-->
