--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
                 </ul>
             </div>
         </div> <!-- end cabeza-->
-        <h1>Pizzeria Yota</h1>
-        <h5> El sabor que te da vida</h5>
+            <h1>Pizzeria Yota</h1>
+            <h3>El sabor que te da vida</h3>
     </div> <!--end portada-->
+
+    <div class="productos">
+
+    </div>
 </body>
 </html>
